kubernetes/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: client
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - image: zozoh94/flask-vue-client:latest
        name: client
