kubernetes/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
  labels:
    app: flaskweb
    tier: db
spec:
  selector:
    matchLabels:
      tier: db
  serviceName: "db-service"
  replicas: 1
  template:
    metadata:
      name: db-pod
      labels:
        app: flaskweb
        tier: db
    spec:
      affinity:
        nodeAffinity:
          requireDuringSchedulingIgnoreDuringExecution:
            nodeSelectorTerms:
              - matchExpressions: 
                - key: nod-role.kubernetes.io/master
                  operator: DoesNotExist
      containers:
        - name: db-container
          image: postgres:10
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 200Mi
