kubernetes/serveur-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serveur-deployment
  labels:
    app: flask-vue-kebernetes
    tier: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-vue-kebernetes
  template:
    metadata:
      name: server-pod
      labels:
        app: flask-vue-kebernetes
        tier: server
    spec:
      containers:
      - name: flask-vue-kebernetes
        image: zozoh94/flask-vue-server:v1.1
        ports:
        - containerPort: 80
