kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    tier: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
