kubernetes/serveur-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serveur-service
spec:
  selector:
    tier: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
